After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719449 - value: Fix memory leak
value: Fix memory leak
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-27 21:34 UTC by Florian Müllner
Modified: 2013-11-27 22:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
value: Fix memory leak (770 bytes, patch)
2013-11-27 21:34 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2013-11-27 21:34:29 UTC
See patch.
Comment 1 Florian Müllner 2013-11-27 21:34:32 UTC
Created attachment 262982 [details] [review]
value: Fix memory leak

The unref() was dropped accidentally in commit 493270b07ad0, put it
back.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-11-27 22:01:41 UTC
Review of attachment 262982 [details] [review]:

Whoops. Yep.
Comment 3 Florian Müllner 2013-11-27 22:12:22 UTC
Attachment 262982 [details] pushed as ee011c1 - value: Fix memory leak