value: Fix memory leak

The unref() was dropped accidentally in commit 493270b07ad0, put it
back.

https://bugzilla.gnome.org/show_bug.cgi?id=719449